用户模块增删改功能 修改用户信息增加电话和邮箱 在结构体字段中加入电话和邮箱的检验规则，操作中同样增加对两者检验的过滤
