# service/userservice.go
@@ -2,11 +2,14 @@ package service
 
 import (
 	"IMchat/models"
+	"github.com/asaskevich/govalidator"
 	"github.com/gin-gonic/gin"
+	"strconv"
 )
 
 // GetUserList
-// @Tags 首页
+// @Summary 所有用户信息
+// @Tags 用户模块
 // @Success 200 {string} json{"code", "message"}
 // @Router /user/getUserList [get]
 func GetUserList(c *gin.Context) {
@@ -16,4 +19,79 @@ func GetUserList(c *gin.Context) {
 	c.JSON(200, gin.H{
 		"message": data,
 	})
+}
+
+// CreateUser
+// @Summary 新增用户信息
+// @Tags 用户模块
+// @param name query string false "name"
+// @param password query string false "password"
+// @param repassword query string false "repassword"
+// @Success 200 {string} json{"code", "message"}
+// @Router /user/createUser [get]
+func CreateUser(c *gin.Context) {
+	user := models.UserBasic{}
+	user.Name = c.Query("name")
+	password := c.Query("password")
+	repassword := c.Query("repassword")
+	if password != repassword {
+		c.JSON(-1, gin.H{
+			"message": "两次密码不一致！",
+		})
+		return
+	}
+	user.PassWord = password
+	models.CreateUser(user)
+	c.JSON(200, gin.H{
+		"message": "Create new user information successfully",
+	})
+}
+
+// DeleteUser
+// @Summary 删除用户信息
+// @Tags 用户模块
+// @param id query string false "id"
+// @Success 200 {string} json{"code", "message"}
+// @Router /user/deleteUser [get]
+func DeleteUser(c *gin.Context) {
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.Query("id"))
+	user.ID = uint(id)
+	models.DeleteUser(user)
+	c.JSON(200, gin.H{
+		"message": "Delete user information successfully",
+	})
+}
+
+// UpdateUser
+// @Summary 修改用户信息
+// @Tags 用户模块
+// @param id formData string false "id"
+// @param name formData string false "name"
+// @param password formData string false "password"
+// @param phone formData string false "phone"
+// @param email formData string false "email"
+// @Success 200 {string} json{"code", "message"}
+// @Router /user/updateUser [post]
+func UpdateUser(c *gin.Context) {
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.PostForm("id"))
+	user.ID = uint(id)
+	user.Name = c.PostForm("name")
+	user.PassWord = c.PostForm("password")
+	user.Phone = c.PostForm("phone")
+	user.Email = c.PostForm("email")
+
+	_, err := govalidator.ValidateStruct(user)
+	if err != nil {
+		panic(err)
+		c.JSON(200, gin.H{
+			"message": "Parameter modification error",
+		})
+	} else {
+		models.UpdateUser(user)
+		c.JSON(200, gin.H{
+			"message": "Update user information successfully",
+		})
+	}
 }
